--- a/src/blocks/modules/_modules.scss
+++ b/src/blocks/modules/_modules.scss
@@ -1,4 +1,13 @@
 @forward "common/header/header";
 @forward "common/footer/footer";
-@forward "common/page-404/page-404";
+
 // @forward "common/main-menu/main-menu";
+
+@forward "about-company/about-company";
+@forward "best-offers/best-offers";
+@forward "first-block/first-block";
+@forward "form-order/form-order";
+@forward "seotext-block/seotext-block";
+@forward "stories-block/stories-block";
+@forward "team-block/team-block";
+@forward "tile-category/tile-category";
