--- a/src/blocks/modules/best-offers/best-offers.scss
+++ b/src/blocks/modules/best-offers/best-offers.scss
@@ -83,7 +83,7 @@
                 }
 
                 & span {
-                    background-color: #fff;
+                    background-color: var(--accent);
                     display: inline-flex;
                     min-height: 36px;
                     align-items: center;
