--- a/src/blocks/components/buttons/buttons.scss
+++ b/src/blocks/components/buttons/buttons.scss
@@ -1,7 +1,7 @@
 @use "vars";
 
 .btn {
-    padding: 0.8em 1.5em 0.85em 1.5em;
+    padding: 0.75em 1.5em 0.85em 1.5em;
     color: var(--accent-02);
     border: none;
     display: flex;
@@ -11,12 +11,11 @@
     height: 50px;
     white-space: nowrap;
     font-style: normal;
-    font-weight: 500;
-    font-size: 18px;
+    font-weight: 600;
+    font-size: 16px;
     text-align: center;
     background-color: var(--accent);
     border-radius: 16px;
-    letter-spacing: .02em;
     position: relative;
     overflow: hidden;
     transition: 0.3s ease;
@@ -100,6 +99,19 @@
         margin-top: 1px;
     }
 
+    &.btn-dark {
+        background-color: var(--accent-02);
+        color: var(--accent);
+
+        &:hover {
+            background-color: var(--accent-03);
+        }
+
+        & svg {
+            fill: var(--accent);
+        }
+    }
+
     &.btn-full {
         width: 100%;
     }
@@ -169,9 +181,6 @@
     }
 
 }
-
-
-
 
 
 @keyframes loadingrotate {
