--- a/src/blocks/modules/stories-block/stories-block.pug
+++ b/src/blocks/modules/stories-block/stories-block.pug
@@ -9,7 +9,7 @@ mixin stories-block
         .container
             .stories-block
                 .stories-block__slider
-                    .splide
+                    .splide(data-slider="stories")
                         .splide__track
                             .splide__list
                                 each item in [1,1,1,1,1,1,1,1,1,1,]
