--- a/src/blocks/modules/tile-category/tile-category.pug
+++ b/src/blocks/modules/tile-category/tile-category.pug
@@ -1,9 +1,9 @@
 mixin card-category(data)
     .card-category
-        .card-category__title: a(href='#')=data.title
         .card-category__row
+            .card-category__title: a(href='#')=data.title
             .card-category__desc= data.desc
-            .card-category__icon: +bgimage(data.icon)
+        .card-category__icon: +bgimage(data.icon)
 
 mixin tile-category
     section.section-tile-category
@@ -17,13 +17,13 @@ mixin tile-category
                         +card-category({
                             title: 'Хвойные растения',
                             desc: 'Ель, кедр, кипарисовик, лиственница и др.',
-                            icon: '/img/icons/cat01.svg',
+                            icon: '/img/icons/cat03.svg',
                         })
                     .tile-category__item
                         +card-category({
                             title: 'Лиственные деревья',
                             desc: 'Берёза, вяз, дуб, ива, карагана, клён и др.',
-                            icon: '/img/icons/cat01.svg',
+                            icon: '/img/icons/cat02.svg',
                         })
                     .tile-category__item
                         +card-category({
@@ -31,3 +31,6 @@ mixin tile-category
                             desc: 'Азалия, актинидия, барбарис, бересклет и др.',
                             icon: '/img/icons/cat01.svg',
                         })
+
+                .tile-category__all
+                    a(href='#'): button.btn Смотреть все растения
